force-app/main/default/objects/Payment_Request__e/Payment_Request__e.object-meta.xml
<CustomObject>
    <description>Notifies MuleSoft that a Payment Request is required, enabling it to integrate with Service Victoria payment gateway</description>
    <label>Payment Request</label>
    <pluralLabel>Payment Requests</pluralLabel>
</CustomObject>