force-app/main/default/objects/Payment_Request__e/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount of the payment</description>
    <label>Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>