force-app/main/default/objects/Payment_Request__e/fields/Biller_Code__c.field-meta.xml
<CustomField>
    <fullName>Biller_Code__c</fullName>
    <description>BPAY biller identifier</description>
    <label>Biller Code</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>