force-app/main/default/objects/Payment_Request__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Payment Description</description>
    <label>Description</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>