force-app/main/default/objects/Payment_Request__e/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email Address of the Primary Participant whom will be sent a copy of the payment receipt</description>
    <label>Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>