force-app/main/default/objects/Payment_Request__e/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Date when the Payment should expire</description>
    <label>Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>