force-app/main/default/objects/Payment_Request__e/fields/Generate_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Generate_Receipt__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the payment gateway should generate a receipt</description>
    <label>Generate Receipt</label>
    <type>Checkbox</type>
</CustomField>