force-app/main/default/objects/Payment_Request__e/fields/Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID__c</fullName>
    <description>The Salesforce payment identifier mapped to the Service Victoria&apos;s &quot;externalUniqueIdentifier&quot; interface attribute</description>
    <label>Payment ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>